tests/functional/lang/eval-fail-set.err.exp
at /pwd/lang/eval-fail-set.nix:1:3:
            1| 8.x
             |   ^
            2|

       error: undefined variable 'x'
